[gd_scene load_steps=15 format=2]

[ext_resource path="res://Images/Menu/1.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Biblioteca/Inventario.gd" type="Script" id=2]
[ext_resource path="res://Images/TextureInventario/4.VisionText.png" type="Texture" id=3]
[ext_resource path="res://Images/TextureInventario/8.DatadrivenText.png" type="Texture" id=4]
[ext_resource path="res://Images/TextureInventario/12.QualitykpisText.png" type="Texture" id=5]
[ext_resource path="res://Images/TextureInventario/10.BusinesskpisText.png" type="Texture" id=6]
[ext_resource path="res://Images/TextureInventario/7..BacklogText.png" type="Texture" id=7]
[ext_resource path="res://Images/TextureInventario/9.UserkpisText.png" type="Texture" id=8]
[ext_resource path="res://Images/TextureInventario/6.StakeholdersText.png" type="Texture" id=9]
[ext_resource path="res://Images/TextureInventario/11.Deploymentkpistext.png" type="Texture" id=10]
[ext_resource path="res://Images/TextureInventario/5.RoadmapText.png" type="Texture" id=11]
[ext_resource path="res://Images/TextureInventario/ProductModel.png" type="Texture" id=12]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;
uniform float scroll_speed;
void fragment() {
	vec2 shifteduv = UV;
	shifteduv.x += TIME * scroll_speed;
	vec4 col = texture(TEXTURE,shifteduv);
	COLOR = col;
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/scroll_speed = null

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="Fundo" type="TextureRect" parent="."]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1920.0
margin_bottom = 1080.0
rect_scale = Vector2( 0.533, 0.556 )
texture = ExtResource( 1 )
stretch_mode = 2

[node name="Coluna_1" type="VBoxContainer" parent="."]
margin_left = 39.0
margin_top = 31.0
margin_right = 451.0
margin_bottom = 577.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Button_1" type="Button" parent="Coluna_1"]
margin_right = 412.0
margin_bottom = 106.0
size_flags_vertical = 4
custom_constants/hseparation = 20
icon = ExtResource( 12 )
flat = true

[node name="Button_2" type="Button" parent="Coluna_1"]
margin_top = 110.0
margin_right = 412.0
margin_bottom = 216.0
size_flags_vertical = 4
custom_constants/hseparation = 20
icon = ExtResource( 3 )
flat = true

[node name="Button_3" type="Button" parent="Coluna_1"]
margin_top = 220.0
margin_right = 412.0
margin_bottom = 326.0
size_flags_vertical = 4
custom_constants/hseparation = 20
icon = ExtResource( 11 )
flat = true

[node name="Button_4" type="Button" parent="Coluna_1"]
margin_top = 330.0
margin_right = 412.0
margin_bottom = 436.0
size_flags_vertical = 4
custom_constants/hseparation = 20
icon = ExtResource( 9 )
flat = true

[node name="Button_5" type="Button" parent="Coluna_1"]
margin_top = 440.0
margin_right = 412.0
margin_bottom = 546.0
size_flags_vertical = 4
custom_constants/hseparation = 20
icon = ExtResource( 7 )
flat = true

[node name="Coluna_2" type="VBoxContainer" parent="."]
margin_left = 521.0
margin_top = 35.0
margin_right = 1013.0
margin_bottom = 581.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Button_6" type="Button" parent="Coluna_2"]
margin_right = 492.0
margin_bottom = 106.0
size_flags_vertical = 4
custom_constants/hseparation = 20
icon = ExtResource( 4 )
flat = true

[node name="Button_7" type="Button" parent="Coluna_2"]
margin_top = 110.0
margin_right = 492.0
margin_bottom = 216.0
size_flags_vertical = 4
custom_constants/hseparation = 20
icon = ExtResource( 8 )
flat = true

[node name="Button_8" type="Button" parent="Coluna_2"]
margin_top = 220.0
margin_right = 492.0
margin_bottom = 326.0
size_flags_vertical = 4
custom_constants/hseparation = 20
icon = ExtResource( 6 )
flat = true

[node name="Button_9" type="Button" parent="Coluna_2"]
margin_top = 330.0
margin_right = 492.0
margin_bottom = 436.0
size_flags_vertical = 4
custom_constants/hseparation = 20
icon = ExtResource( 10 )
flat = true

[node name="Button_10" type="Button" parent="Coluna_2"]
margin_top = 440.0
margin_right = 492.0
margin_bottom = 546.0
size_flags_vertical = 4
custom_constants/hseparation = 20
icon = ExtResource( 5 )
flat = true

[connection signal="pressed" from="Coluna_1/Button_1" to="." method="_on_Button_1_pressed"]
[connection signal="pressed" from="Coluna_1/Button_2" to="." method="_on_Button_2_pressed"]
[connection signal="pressed" from="Coluna_1/Button_3" to="." method="_on_Button_3_pressed"]
[connection signal="pressed" from="Coluna_1/Button_4" to="." method="_on_Button_4_pressed"]
[connection signal="pressed" from="Coluna_1/Button_5" to="." method="_on_Button_5_pressed"]
[connection signal="pressed" from="Coluna_2/Button_6" to="." method="_on_Button_6_pressed"]
[connection signal="pressed" from="Coluna_2/Button_7" to="." method="_on_Button_7_pressed"]
[connection signal="pressed" from="Coluna_2/Button_8" to="." method="_on_Button_8_pressed"]
[connection signal="pressed" from="Coluna_2/Button_9" to="." method="_on_Button_9_pressed"]
[connection signal="pressed" from="Coluna_2/Button_10" to="." method="_on_Button_10_pressed"]
